-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.4, 5.13.0, 5.15.1
-
None
-
QDoc Sprint 2, Da Vinci sprint 17, Da Vinci sprint 18
Compare the top table of:
Newer versions of Qt have lost the "Instantiated By:" field. The "Inherited By:" list is also much shorter, only showing classes from Qt Core.
Updated 2020-09-19: Re-opening this issue as it is still partially present in Qt 5.15.1.
It looks like the QObject page is now fixed, but other pages are still affected:
- https://doc.qt.io/qt-5.9/qabstracttablemodel.html lists "Inherited By: QSqlQueryModel"
- https://doc.qt.io/qt-5/qabstracttablemodel.html lists nothing
- https://doc.qt.io/qt-5.9/qpagedpaintdevice.html lists "Inherited By: QPdfWriter and QPrinter"
- https://doc.qt.io/qt-5/qpagedpaintdevice.html lists "Inherited By: QPdfWriter" only
- relates to
-
QTBUG-77313 [REG] Documentation no longer shows the relationship between qml types from different modules
-
- Closed
-
For Gerrit Dashboard: QTBUG-77126 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
315345,1 | doc: Make QtCore depend on all modules | 5.15 | qt/qtbase | Status: NEW | +2 | 0 |
268476,5 | qdoc: Fix "Inherited By" output | 5.13 | qt/qttools | Status: MERGED | +2 | 0 |
278437,4 | qdoc: Load available index files when depends = * | 5.15 | qt/qttools | Status: ABANDONED | -2 | 0 |
278514,3 | doc: Make QtCore depend on all modules | dev | qt/qtbase | Status: MERGED | +2 | 0 |
278516,2 | doc: Make QtDoc depend on all modules | 5.15 | qt/qtdoc | Status: MERGED | -2 | 0 |
281563,2 | doc: Make QtDoc depend on all modules | 5.14 | qt/qtdoc | Status: MERGED | +2 | 0 |
315483,2 | Doc: Qt GUI: Depend on qtprintsupport documentation module | dev | qt/qtbase | Status: MERGED | +2 | 0 |
315708,3 | Doc: Qt GUI: Depend on qtprintsupport documentation module | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |